--- a/pres/main.tex
+++ b/pres/main.tex
@@ -22,7 +22,26 @@
 
 \subsection{Модель}
 
-Программно реализована однопиковая модель \textbf{PBFTPK} с возможностью обучения на данных и генерации сэмплов с параметрами, подобранными при обучении.
+Программно реализована однопиковая модель \textbf{PBFTPK} с возможностью обучения на данных и генерации сэмплов с параметрами, подобранными при обучении. \newline
+
+Сама модель устроена следующим образом:
+
+$$
+	C(t) = \begin{cases}
+		\frac{F D k_a}{V_d (k_a - k_{el})} (e^{-k_{el} t} - e^{-k_a t}), t \le \tau \\
+		C(\tau)e^{-k_el (t - \tau)}, t > \tau
+	\end{cases}
+$$
+\begin{align*}
+	 & C(t) - \text{концентрация декарства в крови}                     \\
+	 & D > 0 - \text{объём дозы лекарства}                              \\
+	 & F > 0 - \text{биодоступная доля дозы}                            \\
+	 & V_d > 0 - \text{объём распределения лекарства}                   \\
+	 & k_a - \text{параметр всасывания вещества}                        \\
+	 & k_el - \text{параметр выведения вещества}                        \\
+	 & \tau > 0 - \text{время абсорбции}, C(\tau) = \sup_{t \ge 0} C(t)
+\end{align*}
+
 
 \subsection{Метрика}
 
