--- a/text/main.tex
+++ b/text/main.tex
@@ -20,8 +20,10 @@
 \DeclareMathOperator*{\Argmax}{Arg\,max}
 \DeclareMathOperator*{\Argmin}{Arg\,min}
 
-\author{Захарова Т. В., Лазар В. И.}
-\title{Исследование применимости фармакокинетических моделей при анализе свойств лекарственных средств}
+\author{Лазар В. И.}
+\title{Анализ и применение многофакторных моделей динамики лекарственных веществ в медицинских исследованиях}
+
+\graphicspath{{img}}
 
 \begin{document}
 \maketitle
@@ -34,7 +36,7 @@
 
 Фармакокинетика (ФК) — это наука, которая описывает всасывание, распределение, метаболизм и выведение (ADME) лекарственных средств из организма. Её одной из ключевых задач является количественная оценка того, как действующее вещество лекарственного препарата перемещается в различных тканях и органах под влиянием множества факторов: физиологических, биохимических, генетических и внешних (например, сопутствующее лечение, образ жизни пациента и т.\,д.).
 
-В последние годы всё большую популярность приобретают многофакторные модели, учитывающие различные аспекты сложного взаимодействия между лекарством и организмом, а также позволяющие более точно описывать межиндивидуальную вариабельность. Одним из перспективных направлений в этой области считаются модели типа \textbf{PBFTPK}\footnote{Под <<PBFTPK>> здесь условно понимается расширенный класс физиологически обоснованных фармакокинетических моделей (Physiologically Based Factor Tissue Pharmacokinetics).}, которые обладают богатым набором параметров и могут учитывать индивидуальные особенности организма, в том числе пол, возраст, массу тела, функциональное состояние органов и т.\,д.
+В последние годы всё большую популярность приобретают многофакторные модели, учитывающие различные аспекты сложного взаимодействия между лекарством и организмом, а также позволяющие более точно описывать межиндивидуальную вариабельность. Одним из перспективных направлений в этой области считаются модели типа \textbf{PBFTPK}, которые обладают богатым набором параметров и могут учитывать индивидуальные особенности организма, в том числе пол, возраст, массу тела, функциональное состояние органов и т.\,д.
 
 Однако при исследовании фармакокинетических свойств лекарственных средств возникает ряд проблем, связанных с анализом данных:
 
@@ -79,6 +81,25 @@
 
 Данная постановка задачи позволит более точно описывать фармакокинетические процессы в условиях, близких к реальным, и предоставит исследователям удобный инструмент для интерпретации и прогнозирования эффективных режимов лекарственной терапии.
 
+\newpage
+
+\section{Описание данных}
+
+Данные для исследований были предоставлены Центром научного консультирования. Несмотря на то, что данные являются синтетическими, в дальнейших исследованиях будем ссылаться на них как на реальные, поскольку они крайне близки к данным, полученным после одного из проведённых тестов биоэквивалентности двух реальных препаратов. Результаты представлены ввиде временных рядов - зависимостей концентрации вещества в крови от времени. Каждый из временных рядов относится к одному из препаратов - тестовому либо реферрентному. Рассмотрим типичную траекторию имеющегося процесса:
+
+\includegraphics[]{sample.png}
+
+Следует описать основные особеннности имеющихся процессов:
+
+\begin{itemize}
+	\item Траектория стартует из нуля.
+	\item Данные неоднородны по времени. Хорошо видно, что в самом начале гораздо больше замеров нежели чем ближе к концу траектории.
+	\item Единицы измерения по разным осям имеют разные порядки, то есть данные не нормированы.
+	\item Сначала концентрация лекарства растёт, затем (с некоторыми оговорками) она убывает.
+\end{itemize}
+
+Все дальнейшие рассуждения, связанные с моделями, будут учитывать вышеуказанные особенности.
+
 
 \newpage
 
@@ -97,6 +118,8 @@
 	\item $k_{el}$ - \text{коэффициент выводимости лекарственного средства}
 	\item $\tau$ - \text{время абсорбции лекарственного средства}
 \end{itemize}
+
+Также условимся называть $C(t)$ при $t < \tau$ ($t \ge \tau$) этапом абсорбции (выведения)
 
 \subsubsection*{$PBFTPK_0$:}
 
@@ -201,24 +224,41 @@
 \]
 
 Также стоит упомянуть, что данный метод при незначительной модификации может быть использован для предсказания траектории. Для этого нужно будет изменить $l_{\lambda}$ таким образом, что $l_{\lambda} = 0$ при $t > \tau_{max}$, и считать за $\tau_{max}$ время последнего замера концентрации лекарства в крови.
-\newpage
-
-\section{Описание данных}
 
 \newpage
 
 \section{Полученные результаты}
 
+На графиках представлены сравнительные результаты работы двух моделей - \textbf{PBFTPK} (сверху) и полчуенной в ходе исследований модели \textbf{EPBFTPK} с взвешенной среднеквадратичной функцией потерь (снизу). Можно заметить, что полученная модель при удачном подброе гиперпараметров (количество моделей в ансамбле, коэффициент $\lambda$, метод оценки абсорбции, и т. д.) оказывается более точной и лучше отражает зависимости в реальных данных. Особенно хорошо это видно в тех случаях, когда после времени абсорбции концентрация убывает не сразу. Стоит отметить, что наименьшую точность модель будет иметь на <<пиках>>, то есть как раз в моменты $\tau_i$.
+
+
+\begin{center}
+	\textbf{Здесь будет таблица со значениями MSE для различных моделей}
+\end{center}
+
 \newpage
 
-\section{Заключение}
+\includegraphics{results/basic_1.png}\newline
+\includegraphics{results/1.jpg}\newline
+
+\includegraphics{results/basic_2.png}\newline
+\includegraphics{results/2.jpg}\newline
+
+\includegraphics{results/basic_3.png}\newline
+\includegraphics{results/3.jpg}\newline
+
+\includegraphics{results/basic_4.png}\newline
+\includegraphics{results/4.jpg}\newline
+
+\includegraphics{results/basic_5.png}\newline
+\includegraphics{results/5.jpg}\newline
+
+\includegraphics{results/basic_6.png}\newline
+\includegraphics{results/6.jpg}\newline
+
 
 \newpage
 
-\section{Список литературы}
-
-\newpage
-
-\section{Приложение}
+\section*{Список литературы}
 
 \end{document}
