--- a/text/main.tex
+++ b/text/main.tex
@@ -39,7 +39,7 @@
 
 Фармакокинетика (ФК) — это наука, которая описывает всасывание, распределение, метаболизм и выведение (ADME) лекарственных средств из организма. Её одной из ключевых задач является количественная оценка того, как действующее вещество лекарственного препарата перемещается в различных тканях и органах под влиянием множества факторов: физиологических, биохимических, генетических и внешних (например, сопутствующее лечение, образ жизни пациента и т.\,д.).
 
-В последние годы всё большую популярность приобретают многофакторные модели, учитывающие различные аспекты сложного взаимодействия между лекарством и организмом, а также позволяющие более точно описывать межиндивидуальную вариабельность. Одним из перспективных направлений в этой области считаются модели типа \textbf{PBFTPK}, которые обладают богатым набором параметров и могут учитывать индивидуальные особенности организма, в том числе пол, возраст, массу тела, функциональное состояние органов и т.\,д.
+В последние годы всё большую популярность приобретают многофакторные модели, учитывающие различные аспекты сложного взаимодействия между лекарством и организмом, а также позволяющие более точно описывать межиндивидуальную вариабельность. Одним из перспективных направлений в этой области считаются модели типа \textbf{PBFTPK}\cite{macheras}, которые обладают богатым набором параметров и могут учитывать индивидуальные особенности организма, в том числе пол, возраст, массу тела, функциональное состояние органов и т.\,д.
 
 Однако при исследовании фармакокинетических свойств лекарственных средств возникает ряд проблем, связанных с анализом данных:
 
