--- a/pres/main.tex
+++ b/pres/main.tex
@@ -18,8 +18,8 @@
 \usecolortheme{default}
 
 \title{Анализ и применение многофакторных моделей динамики лекарственных веществ в медицинских исследованиях}
-\author{Лазар В. И.}
-\institute{кафедра МС ВМК МГУ}
+\author{Лазар В. И., Захарова Т. В.}
+\institute{ВМК МГУ}
 
 \begin{document}
 
