--- a/pres/main.tex
+++ b/pres/main.tex
@@ -18,7 +18,7 @@
 \usecolortheme{default}
 
 \title{Анализ и применение многофакторных моделей динамики лекарственных веществ в медицинских исследованиях}
-\author{Лазар В. И., Захарова Т. В.}
+\author{Лазар В. И.}
 \institute{ВМК МГУ}
 
 \begin{document}
